# Beauty-Product-Recommendation

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
beauty_product_recommendation/: main.ipynb  main.py
data/: All_Beauty.jsonl.features.txt  cleaned_All_Beauty.jsonl  cleaned_All_Beauty.jsonl.features.txt  cleaned_meta_All_Beauty.jsonl  cleaned_meta_All_Beauty.jsonl.features.txt  meta_All_Beauty.jsonl.features.txt
data_processing/: data_cleaning.py  data_merge.py  text_processing.py
models/: linear_svc.py  naive_bayes.py  sentiment_generator.py
utils/: feature_listing.py  file_converter.py
